Release 3.2.0: Isotope structure rewrite (breaking compatibility), MZMine EIC import, channel-based calibration, channel table additions, viewer fixes
feat(isotopes/channels): replace Isotope structure with Channel abstraction to support computed sums and unassigned isotopes [experimental]
** Breaking: project files created before v3.2.0 are not compatible with this version
feat(reader/mzmine): add EIC import from MZMine
fix(boxplot): fix color variation in boxplot viewer
fix(boxplot): fix box label rendering in boxplot viewer
fix(scatter): fix axis label rendering in scatter plot viewer
feat(channel-table): add NMP, µBG, and net area columns to mz/channel table (formerly isotope table)
fix(calibration): restore copy button visibility when sample is loaded via project file
feat(calibration): add channel-based calibration support for summed isotopes
feat(export): add LPC data export to MIA format